--- a/views/home.html
+++ b/views/home.html
@@ -291,9 +291,11 @@
             </article>
             <br>
 
-            <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
+            
 
         </section>
+
+        <P class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
     </footer>
 
 </body>
