--- a/views/login.html
+++ b/views/login.html
@@ -147,9 +147,10 @@
                     </article>
                     <br>
         
-                    <P>Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
+                    
         
                 </section>
+                <P class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</P>
             </footer>
         
         </body>
